tarea del dia viernes

--- a/index.html
+++ b/index.html
@@ -58,12 +58,15 @@
 		<main role="main">
 			<div id="intro-wrap">
 				<div id="intro" class="preload" data-autoplay="5000" data-navigation="true" data-pagination="true" data-transition="fade">					
-					<div class="intro-item" style="background-color: #55e712;">		
+					<div class="intro-item" style="background-color: #e44f62;">		
 						<div class="intro-mockup-wrapper">		
 							<div class="caption-mockup caption-right column six last-special">
-								<h2>Junior Abelardo Quispe Coaquira</h2>
+                                <h2
+								style="color:rgb(0, 255, 106);"
+								>DISEÑO-WEB GRAFICO</h2>
+								<h3>Junior Abelardo Quispe Coaquira</h3>
 								<p>Diseñador Web Grafico, experto en manejo de redes y sistemas de información, también realizo diseños de programación web
-									<br>Designed by <a href="http://dribbble.com/rickwaalders">Junior Quispe</a></p>
+									<br>Diseñado por <a href="http://dribbble.com/rickwaalders">Junior Quispe</a></p>
 								<a class="button white transparent" href="#">Acerca de mi</a>
 							</div><!-- caption -->
 							<div class="intro-mockup intro-left column six">
@@ -71,11 +74,12 @@
 							</div><!-- intro-mockup -->							
 						</div><!-- intro-mockup-wrapper -->
 					</div>					
-					<div class="intro-item" style="background-color: #f5be55;">
+					<div class="intro-item" style="background-color: #3541ec;">
 						<div class="intro-mockup-wrapper">						
 							<div class="caption-mockup">
 							        	<h2>Diseño página-web</h2>
 								<p>El diseño de páginas web, requiere de una buena imaginación creativa,Word-Press</p>
+								<p>Si deseas una publicidad para su negocio o empresa no dude en requerir mis servicios de desarrollo de pagina web</p>
 							</div><!-- caption -->	
 							<div class="photocaption">
 								<h4>Shot by <a href="http://dribbble.com/noptar">Mani</a></h4>
@@ -89,7 +93,9 @@
 					<div class="intro-item" style="background-color: #32cba3;">
 						<div class="intro-mockup-wrapper">						
 							<div class="caption-mockup">
-								<h2>Built for iPad</h2>
+								<h2>     Software - gestión de archivos</h2>
+								<p>Presentamos la herramienta de ticketing para gestionar todas las solicitudes de servicio y soporte</p>
+								<p>Las funcionalidades del software de Help Desk de ServiceTonic le permitirán gestionar eficazmente las solicitudes de servicio de sus clientes. Gracias a la potente herramienta de ticketing, podrá realizar informes de seguimiento, gestionar activos en la CMDB, geolocalizar a sus contactos y tickets en Google Maps, y mucho más.</p>
 							</div><!-- caption -->	
 							<div class="photocaption">
 								<h4>Shot by <a href="http://dribbble.com/noptar">Mani</a></h4>
@@ -106,8 +112,7 @@
 
 				<section class="row section call-to-action">
 					<div class="row-content buffer even">
-						<p>Have you fallen in love with Beetle?</p>
-						<a class="button aqua" href="#">Buy it now!</a>
+					
 					</div>
 				</section>
 
@@ -116,24 +121,24 @@
 						<div class="column four centertxt">
 							<div class="big-icon red"><i class="icon icon-flash"></i></div>
 							<div class="big-icon-text clear-after">
-								<h4>Landing page</h4>
-								<p class="text-s">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+								<h4>Servicio Remoto Técnico</h4>
+								<p class="text-s">Realizamos servicios de actualizaciones de antivirus, formateo, mantenimiento en general.</p>
 								<a class="button transparent white" href="#">Read more</a>
 							</div>
 						</div>
 						<div class="column four centertxt">
 							<div class="big-icon red"><i class="icon icon-compass"></i></div>
 							<div class="big-icon-text clear-after">
-								<h4>Blog</h4>
-								<p class="text-s">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+								<h4>Herramienta de Ticketing y Help Desk Multicanal</h4>
+								<p class="text-s">Registro y seguimiento de incidencias, problemas, solicitudes, cambios y tareas gracias a la combinación de una potente herramienta de ticketing con un Service Desk Multicanal (Teléfono, Email, Móvil, Web, Chat, QR) que potencia el Autoservicio..</p>
 								<a class="button transparent white" href="#">Read more</a>
 							</div>
 						</div>						
 						<div class="column four last centertxt">
 							<div class="big-icon red"><i class="icon icon-picture"></i></div>
 							<div class="big-icon-text clear-after">
-								<h4>Portfolio</h4>
-								<p class="text-s">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+								<h4>Software de Help Desk para la automatizacion de procesos</h4>
+								<p class="text-s">La automatización de procesos es clave para trabajar de forma efectiva y mejorar la satisfacción de usuarios o clientes. La herramienta de ticketing de ServiceTonic dispone de una rica funcionalidad para automatizar procesos.</p>
 								<a class="button transparent white" href="#">Read more</a>
 							</div>
 						</div>
@@ -143,8 +148,8 @@
 				<section class="row section text-light" style="background-color:#4fcead">
 					<div class="row-content buffer even clear-after">	
 						<div class="column six">
-							<h2>Google Maps API</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+							<h2>Software de Help Desk con Integración</h2>
+							<p>Integración directa con sistemas de Correo Electrónico, Directorios de usuarios, Bases de Datos, Telefonía y con cualquier otra aplicación compatible con Web Service.</p>
 							<a class="button transparent white" href="#">Explore</a>
 						</div>
 						<div class="side-mockup right-mockup animation">
@@ -162,9 +167,9 @@
 				<section class="row section text-light" style="background-color:#FFCE54">
 					<div class="row-content buffer even clear-after">
 						<div class="column six push-six last-special">
-							<h2>Landing page</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-							<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
+							<h2>Herramienta de ticketing y Help Desk Multicanal</h2>
+							<p>Registro y seguimiento de incidencias, problemas, solicitudes, cambios y tareas gracias a la combinación de una potente herramienta de ticketing con un Service Desk Multicanal (Teléfono, Email, Móvil, Web, Chat, QR) que potencia el Autoservicio.</p>
+							<p>ServiceTonic incorpora, en su software de help desk, distintos elementos para que cada usuario pueda explotar la información que le corresponde eficientemente, incluyendo Cuadros de mando con KPIs, Informes, Vistas dinámicas y la Base de Datos de Conocimiento.</p>
 							<a class="button transparent white" href="#">Explore</a>
 						</div>						
 						<div class="side-mockup left-mockup animation">
